// Copyright (C) 2021 The Android Open Source Project
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package replicationstatus.cache;

option java_package = "com.googlesource.gerrit.plugins.replicationstatus.proto";

// Serialized form of com.googlesource.gerrit.plugins.replicationstatus.RefReplicationStatus.Key.
// Next ID: 3
message ReplicationStatusKeyProto {
  string project = 1;
  string ref = 2;
}

// Serialized form of com.googlesource.gerrit.plugins.replicationstatus.RemoteReplicationStatus.
// Next ID: 3
message RemoteReplicationStatusProto {
  int64 when = 1;
  string status = 2;
}

// Serialized form of com.googlesource.gerrit.plugins.replicationstatus.RefReplicationStatus.
// Next ID: 2
message RefReplicationStatusProto {
  map<string, RemoteReplicationStatusProto> remote_status = 1;
}


